<resources>
    <string name="app_name">ImgurUploader</string>
    <string name="error_sign_in">El inicio de sesión ha fallado, inténtalo de nuevo</string>
    <string name="error_register">El registro ha fallado, inténtalo de nuevo</string>
    <string name="error_empty_form">Completa el formulario correctamente</string>

    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="register_button">Registrar</string>
    <string name="register_toggle_1">No tengo una cuenta</string>
    <string name="register_toggle_2">Ya tengo cuenta</string>

    <string name="error_imgur_user">No se ha podido recoger el usuario, inténtalo de nuevo</string>
    <string name="error_imgur_upload">No se ha podido subir la foto, inténtalo de nuevo</string>
    <string name="error_imgur_delete">No se ha podido eliminar la foto, inténtalo de nuevo</string>
    <string name="error_imgur_get_images">No se han podido recoger las fotos, inténtalo de nuevo</string>

    <string name="dialog_upload">Subir</string>
    <string name="dialog_delete">Eliminar</string>
    <string name="dialog_upload_image">Subir foto</string>
    <string name="img_titulo">Titulo</string>
    <string name="img_description">Descripción</string>

    <string name="action">Añadir Foto</string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="imgur_image">Imgur image</string>
    <string name="imgur_image_to_upload">Imgur image to upload</string>
    <string name="no_image_selected">No hay una imagen seleccionada</string>
</resources>