<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_to_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/imgur_image_to_upload"
                android:maxHeight="256dp"
                tools:src="@drawable/camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/imgur_title_layout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imgur_title_layout"
                style="@style/CustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/imgur_description_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/imgur_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/img_titulo"
                    android:inputType="textCapSentences"
                    android:maxLength="32"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/imgur_description_layout"
                style="@style/CustomTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/imgur_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/img_description"
                    android:inputType="textCapSentences"
                    android:maxLength="32"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/upload"
                style="@style/CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/upload_image_title"
                app:layout_constraintEnd_toEndOf="@+id/imgur_description_layout"
                app:layout_constraintStart_toStartOf="@+id/imgur_description_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteY="136dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loading_layout"
            layout="@layout/component_loading_layout"/>

    </FrameLayout>

</ScrollView>