<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_widget"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primaryColor"
            app:buttonGravity="center_vertical"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/contrast"
            app:titleTextAppearance="@style/TitleStyle">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/user_avatar"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/camera"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_widget">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imgur_images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/action"
                    app:icon="@drawable/add_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_from_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/secondaryColor"
                    android:contentDescription="@string/gallery"
                    android:visibility="gone"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toTopOf="@+id/add_image"
                    app:layout_constraintEnd_toEndOf="@+id/add_image"
                    app:srcCompat="@drawable/gallery"
                    tools:visibility="visible" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_from_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:backgroundTint="@color/secondaryColor"
                    android:contentDescription="@string/camera"
                    android:visibility="gone"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toTopOf="@+id/add_from_gallery"
                    app:layout_constraintEnd_toEndOf="@+id/add_from_gallery"
                    app:layout_constraintStart_toStartOf="@+id/add_from_gallery"
                    app:srcCompat="@drawable/camera"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/upload_image_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_widget"
            tools:name="com.gabr.gabc.imguruploader.presentation.homePage.components.UploadForm" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/image_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_widget"
            tools:name="com.gabr.gabc.imguruploader.presentation.homePage.components.ImageDetails" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/component_loading_layout"/>

</FrameLayout>